--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pickle
-  - urllib.request
-  - gzip
+  - urllib3
   - os
   - sys
   - zipfile
