changing package name

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 
 # the actual commands to run
 script:
-- coverage run -m unittest movie-recommendation-system/tests/tests.py
+- coverage run -m unittest bingewatch/tests/tests.py
 
 # generate a coverage report to send to back to user
 after_success:
