--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
     - conda info -a
+    - pip install gunicorn
     - pip install -r requirements.txt
     - conda env create -f environment.yml
     - source activate mrs
